--- a/IntroProbData/Course Project/intro_data_prob_project.Rmd
+++ b/IntroProbData/Course Project/intro_data_prob_project.Rmd
@@ -140,14 +140,12 @@ Column: 83-84 SAS Variable Name: MENTHLTH
 Prologue:
 Description: Now thinking about your mental health, which includes stress, depression, and problems with emotions, for how
 many days during the past 30 days was your mental health not good?
-Value Value Label Frequency Percentage
-Weighted
-Percentage
-1 - 30 Number of days 148,648 30.23 33.18
+Value Value Label
+1 - 30 Number of days
 Notes: _ _ Number of days
-88 None 334,490 68.02 65.13
-77 Don't know/Not sure 6,336 1.29 1.20
-99 Refused 2,290 0.47 0.49
+88    None
+77    Don't know/Not sure
+99    Refused
 BLANK Not asked or Missing 
 
 
