--- a/IntroProbData/Course Project/intro_data_prob_project.Rmd
+++ b/IntroProbData/Course Project/intro_data_prob_project.Rmd
@@ -11,7 +11,7 @@ output:
 
 ## Behavioral Risk Factor Surveillance System (BRFSS)
 
-The BRFSS is a collection of health related telephone surveys conducted annually.  There are 400,000 surveys performed each year on a wide variety of health issues and risk behaviors on adult U.S. residents.  The data is collected from all 50 states along with the District of Columbia.
+The BRFSS is a collection of health related telephone surveys conducted annually.  The BRFSS boasts an annual collection of 400,000 surveys performed each year on a wide variety of health issues and risk behaviors on adult U.S. residents.  The data is collected from all 50 states along with the District of Columbia.
 
 The data can be found online at CDC website.  I am using the 2013 set of data for this analysis.
 
@@ -19,77 +19,46 @@ http://www.cdc.gov/brfss/
 
 Percentage of US Adults who reported Fair or poor health
 https://www.cdc.gov/chronicdisease/resources/publications/aag/brfss.htm
-Can I generate a map?
 
+## Initial setup requirements
 
-Minnesota Initiatives
+Set the enivronments, load all of the necessary libraries and load the full data set.
 
-Provide data on current tobacco use to inform initiatives to prevent and reduce tobacco use in Minnesota.
-Plan and evaluate Minnesota public health goals.
-Assess exposure to environmental health risks in the home from lead, asbestos, radon, and well-water contamination.
-Monitor the use of preventive health services and the prevalence of chronic conditions to evaluate the effectiveness of intervention strategies.
-
-## Setup
-
-```{r set-environment, echo=FALSE}
+```{r set-environment, message=FALSE}
 setwd('C:/Development/R Projects/Duke/IntroProbData/Course Project')
-```
 
-### Load packages
-
-```{r load-packages, message = FALSE}
 library(ggplot2)
 library(dplyr)
-```
 
-### Load data
-
-Make sure your data and R Markdown files are in the same directory. When loaded
-your data file will be called `brfss2013`. Delete this note when before you submit 
-your work. 
-
-```{r load-data, echo=FALSE}
 load("brfss2013.RData")
 ```
-
-
 
 * * *
 
 ## Part 1: Data
 
+The 2013 survey contains a collection of 491775 respondents with 330 facts.  
 
 * * *
 
 ## Part 2: Research questions
 
-**Does the amount of sleep have any correlation to the general feeling of wellness?  Is there a difference between men and women?**
+**Question 1: Does the amount of sleep have any correlation to the general feeling of wellness?**
 
-**Smoking and Income Correlation**
+**Question 2: Are there any correlations between income and smoking?**
 
-**Research quesion 3:**
+**Question 3: Given that a random survey respondent is a woman, what is the percentage that the respondent smokes?**
 
 
 * * *
 
-## Part 3: Exploratory data analysis
+## Exploratory data analysis 
 
-**Research quesion 1:**
+**Research question 1:**
+
+The first thing that I am doing is creating a clean data set of just two facts: the general health status and the sleep time.  I am cleaning the data by removing all records that have NA for either column.  I am also removing all records that have a sleep time greater than 24 (there were 2).  These have been removed because they are obviously erroneous.  It also seems implausible that records with 0 or 24 hours daily are valid, but I do not have enough information to make a determination on them.  I am choosing to leave them in my data set.
 
 ```{r}
-# Build data representing the sleep time and general health.  Do I want to include physical and mental health days
-# brfss2013 %>%
-#   filter(!is.na(genhlth)) %>%
-#   group_by(genhlth) %>%
-#   summarise(count = n()) 
-# 
-# brfss2013 %>%
-#   filter(!is.na(sleptim1)) %>%
-#   filter(sleptim1<=24) %>%
-#   group_by(as.numeric(sleptim1)) %>%
-#   summarise(count = n()) %>%
-#   str()
-
 sleepANDhealth <-
   brfss2013 %>%
     filter(!is.na(genhlth)) %>%
@@ -98,10 +67,50 @@ sleepANDhealth <-
     select(genhlth, sleptim1)
 ```
 
+Running some functions on the sleep time provides us with a median of 7, mean of 7.051 and standard deviation of 1.464587.
+
+```{r}
+summary(sleepANDhealth$sleptim1)
+sd(sleepANDhealth$sleptim1)
+```
+
+Plotting a histogram of the sleep time provides a nearly normal distribution, that is slightly skewed right.
+
+```{r q1histogram}
+hist(sleepANDhealth$sleptim1, main = "Histogram of Sleep Time", xlab = "Sleep Time (in hours)")
+```
+
+The National sleep foundation recommends that adults get between 7 and 9 hours of sleep each day.
+
+Looking over the histogram of sleep times from the survey respondents, I can see that it matches up with the recommendation from the National Sleep Foundation.  Because of this, I am going to create categories for the sleep time as follows (roughly based on the average and the standard deviation):
+
+Hours of Sleep | Category
+-------------- | -------------
+0 through 4 | Very sleep deprived
+5 and 6 | Sleep deprived
+7 through 9 | Average sleep
+10 and 11 | Oversleeping
+12 through 24 | Very oversleeping
+
+```{r q1categories}
+levels <- c(-Inf, 5, 6.8, 9.8, 11.8, Inf)
+labels <- c("Very Sleep Deprived", "Sleep Deprived", "Average", "Oversleeping", "Very Oversleeping")
+
+sleepANDhealth <- sleepANDhealth %>% 
+  mutate(sleepcat = cut(sleptim1, levels, labels = labels))
+```
 
 
+```{r q1results}
+table(sleepANDhealth$sleepcat)
+plot(sleepANDhealth$sleepcat, sleepANDhealth$genhlth, xlab = "Sleep Category", ylab = "Feeling of Health")
+```
 
-**Research quesion 2:**
+Conclusions for question 1. Based on the chart above, there does appear to be a correlation between sleep times and the general feeling of health.  As you can see, the Average category (which is the recommending sleep times) has the highest amount of people who rated themselves in good health or better.  As people had more or less sleep than recommended, they were more likely to rate themselves as fair or poor health.
+
+What cannot be concluded here is whether getting the recommended sleep improves health or if better health improves sleep times.  It is cannot be concluded whether there is another factor that affects both.
+
+**Research question 2:**
 
 ```{r}
 
@@ -109,9 +118,41 @@ sleepANDhealth <-
 
 
 
-**Research quesion 3:**
+**Research question 3:**
+
+Given that a random survey respondent is a woman, what is the percentage that the respondent smokes?
+
+I will create another new data set for my data analysis.  I am going to remove all records that do not have the gender selected (this removes 7 records).  Determining whether someone is a smoker and that we have valid data is a little more complicated.  The SMOKE100 column indicates whether someone has smoked 100 cigarettes in their lifetime.  Values other than 1 or 2 have no meaning in my analysis and so I will filter them out.
+
+The data related to smoking is a little bit confusing.  So I am outlining the decisions that I have made on how to interpret the data.
+
+smoke100 | smokday2 | Smoker 
+-------------- | ------------- | -------------
+7, 9 and NA | Any Value | Can't determine, these will be discarded
+2 | Any value | Not a smoker
+1 | 7, 9 and NA | Can't determine, these will be discarded
+1 | 3 | No, these are former smokers.
+1 | 1 and 2 | Yes
+
 
 ```{r}
+
+genderANDsmoking <-
+  brfss2013 %>%
+    filter(!is.na(sex)) %>%
+    filter(!is.na(smoke100)) %>%
+    filter(smoke100 == 'Yes' & !is.na(smokday2) | smoke100 == 'No') %>%
+    #filter(! smoke100 == 'Yes' & !is.na(smokday2)) %>%
+    select(sex, smoke100, smokday2)
+
+genderANDsmoking <- genderANDsmoking %>%
+    mutate(smoker = smoke100 == 'Yes' & smokday2 %in% c('Every day','Some days'))
+
+
+genderANDsmoking %>%
+    filter() %>%
+    group_by(sex, smoke100, smokday2, smoker) %>% 
+    summarise(count = n())
 
 ```
 
